--- a/notebook/ny-stock-price-prediction-rnn-lstm-gru.ipynb
+++ b/notebook/ny-stock-price-prediction-rnn-lstm-gru.ipynb
@@ -51,7 +51,7 @@
       "WARNING:tensorflow:From /opt/anaconda3/envs/tf/lib/python3.7/site-packages/tensorflow_core/python/compat/v2_compat.py:65: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "/Users/wyx/projects/priceprediction: ['python', 'input', 'README.md', '.gitignore', 'notebook', '.git', '.idea']\n",
+      "/Users/wyx/projects/priceprediction: ['python', 'config', 'input', 'README.md', '.gitignore', 'notebook', '.git', '.idea']\n",
       "/Users/wyx/projects/priceprediction/notebook: ['ny-stock-price-prediction-rnn-lstm-gru.ipynb', '.ipynb_checkpoints']\n"
      ]
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "_cell_guid": "60dbc696-dda8-476e-8227-010a79df3aa2",
     "_uuid": "aef1074dd4f86a9fe5a380c83994123ce56cce9d"
@@ -119,7 +119,7 @@
       "memory usage: 45.5+ MB\n",
       "\n",
       "number of different stocks:  501\n",
-      "['MUR', 'COL', 'COTY', 'USB', 'AVB', 'ADM', 'RF', 'CMI', 'EQIX', 'MTD']\n"
+      "['KEY', 'AVB', 'CMA', 'RHT', 'MAA', 'MCK', 'PCLN', 'EXPE', 'MCHP', 'FIS']\n"
      ]
     }
    ],
