--- a/notebook/ny-stock-price-prediction-rnn-lstm-gru.ipynb
+++ b/notebook/ny-stock-price-prediction-rnn-lstm-gru.ipynb
@@ -51,7 +51,7 @@
       "WARNING:tensorflow:From /opt/anaconda3/envs/tf/lib/python3.7/site-packages/tensorflow_core/python/compat/v2_compat.py:65: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "/Users/wyx/projects/priceprediction: ['python', 'config', 'input', 'README.md', '.gitignore', 'notebook', '.git', '.idea']\n",
+      "/Users/wyx/projects/priceprediction: ['saved_model', 'python', 'config', 'input', 'README.md', '.gitignore', 'notebook', '.git', '.idea']\n",
       "/Users/wyx/projects/priceprediction/notebook: ['ny-stock-price-prediction-rnn-lstm-gru.ipynb', '.ipynb_checkpoints']\n"
      ]
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "_cell_guid": "60dbc696-dda8-476e-8227-010a79df3aa2",
     "_uuid": "aef1074dd4f86a9fe5a380c83994123ce56cce9d"
@@ -119,7 +119,7 @@
       "memory usage: 45.5+ MB\n",
       "\n",
       "number of different stocks:  501\n",
-      "['KEY', 'AVB', 'CMA', 'RHT', 'MAA', 'MCK', 'PCLN', 'EXPE', 'MCHP', 'FIS']\n"
+      "['IBM', 'ETN', 'ADP', 'CHTR', 'ARNC', 'BCR', 'UNP', 'COH', 'TSO', 'RHI']\n"
      ]
     }
    ],
@@ -957,10 +957,374 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>open</th>\n",
+       "      <th>close</th>\n",
+       "      <th>low</th>\n",
+       "      <th>high</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-01-05</th>\n",
+       "      <td>WLTW</td>\n",
+       "      <td>123.430000</td>\n",
+       "      <td>125.839996</td>\n",
+       "      <td>122.309998</td>\n",
+       "      <td>126.250000</td>\n",
+       "      <td>2163600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-06</th>\n",
+       "      <td>WLTW</td>\n",
+       "      <td>125.239998</td>\n",
+       "      <td>119.980003</td>\n",
+       "      <td>119.940002</td>\n",
+       "      <td>125.540001</td>\n",
+       "      <td>2386400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-07</th>\n",
+       "      <td>WLTW</td>\n",
+       "      <td>116.379997</td>\n",
+       "      <td>114.949997</td>\n",
+       "      <td>114.930000</td>\n",
+       "      <td>119.739998</td>\n",
+       "      <td>2489500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-08</th>\n",
+       "      <td>WLTW</td>\n",
+       "      <td>115.480003</td>\n",
+       "      <td>116.620003</td>\n",
+       "      <td>113.500000</td>\n",
+       "      <td>117.440002</td>\n",
+       "      <td>2006300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-11</th>\n",
+       "      <td>WLTW</td>\n",
+       "      <td>117.010002</td>\n",
+       "      <td>114.970001</td>\n",
+       "      <td>114.089996</td>\n",
+       "      <td>117.330002</td>\n",
+       "      <td>1408600.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           symbol        open       close         low        high     volume\n",
+       "date                                                                        \n",
+       "2016-01-05   WLTW  123.430000  125.839996  122.309998  126.250000  2163600.0\n",
+       "2016-01-06   WLTW  125.239998  119.980003  119.940002  125.540001  2386400.0\n",
+       "2016-01-07   WLTW  116.379997  114.949997  114.930000  119.739998  2489500.0\n",
+       "2016-01-08   WLTW  115.480003  116.620003  113.500000  117.440002  2006300.0\n",
+       "2016-01-11   WLTW  117.010002  114.970001  114.089996  117.330002  1408600.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>close</th>\n",
+       "      <th>low</th>\n",
+       "      <th>high</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>open</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1762</th>\n",
+       "      <td>467</td>\n",
+       "      <td>467</td>\n",
+       "      <td>467</td>\n",
+       "      <td>467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1008</th>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>504</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>378</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>892</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>304</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>786</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>853</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>894</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>896</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>987</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1540</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1683</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1761</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      close  low  high  volume\n",
+       "open                          \n",
+       "1762    467  467   467     467\n",
+       "1008     13   13    13      13\n",
+       "504       4    4     4       4\n",
+       "378       2    2     2       2\n",
+       "892       2    2     2       2\n",
+       "385       1    1     1       1\n",
+       "304       1    1     1       1\n",
+       "786       1    1     1       1\n",
+       "853       1    1     1       1\n",
+       "251       1    1     1       1\n",
+       "894       1    1     1       1\n",
+       "896       1    1     1       1\n",
+       "987       1    1     1       1\n",
+       "284       1    1     1       1\n",
+       "1540      1    1     1       1\n",
+       "1683      1    1     1       1\n",
+       "1761      1    1     1       1\n",
+       "126       1    1     1       1"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('symbol').count().groupby('open').count().sort_values('close', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['AAP', 'VNO', 'DG', 'TWX', 'PKI', 'PHM', 'JPM', 'R', 'PBCT', 'WFM',\n",
+       "       'ESS', 'HST', 'IVZ', 'CELG', 'PNC', 'FL', 'AME', 'HES', 'COST', 'RRC'],\n",
+       "      dtype='object', name='symbol')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnt_df = df.groupby('symbol').count()\n",
+    "cnt_df[cnt_df.open > 1000].sample(20).index"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'AAP', 'VNO', 'DG', 'TWX', 'PKI', 'PHM', 'JPM', 'ESS', 'R','HES', 'COST', 'RRC', 'CELG', 'AME'\n",
+    "\n",
+    "'JPM', 'R', 'PBCT', 'WFM',\n",
+    " 'HST', 'IVZ', 'CELG', 'PNC', 'FL', 'AME', 'HES', 'COST', 'RRC'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'AAPL' in cnt_df.index"
+   ]
   },
   {
    "cell_type": "code",
